css/custom.css
@import url('https://fonts.googleapis.com/css?family=Montserrat:200,300,600');

body{
    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
}

#intro .item .logo {
    margin-bottom: 3%;
}

#intro .item h1, #intro .item h2 {
  color: black;
}


/* NAVBAR */

@media (max-width: 993px) {
  .navbar-header {
      float: none;
  }
  .navbar-left,.navbar-right {
      float: none !important;
  }
  .navbar-toggle {
      display: block;
  }
  .navbar-collapse {
      border-top: 1px solid transparent;
      box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
  }
  .navbar-fixed-top {
      top: 0;
      border-width: 0 0 1px;
  }
  .navbar-collapse.collapse {
      display: none!important;
  }
  .navbar-nav {
      float: none!important;
      margin-top: 7.5px;
  }
  .navbar-nav>li {
      float: none;
  }
  .navbar-nav>li>a {
      padding-top: 10px;
      padding-bottom: 10px;
  }
  .collapse.in{
      display:block !important;
  }
}

/* ABOUT ME */

#profilePic {
  min-width: 60%;
  max-width: 380px;
}

#profileText {
  margin-top: 6rem;
  margin-bottom: 3rem;
}

@media only screen and (max-width: 768px) {
  #profilePic {
    max-width: 60%;
    min-width: 300px;
  }

  #profileText {
    margin-top: 0;
    margin-bottom: 0;
  }
}

/* MEDIA QUERIES FOR INTRO*/
@media only screen and (min-width: 0px) {
  #intro .item h2 {
    font-size: 25px;
    margin-bottom: 20%;
  }
  .logo img {
    width: 30%;
  }
} 
@media only screen and (min-width: 350px) {
  #intro .item h2 {
    font-size: 25px;
    margin-bottom: 45%;
  }
  .logo img {
    width: 30%;
    max-width: 200px;
  }
} 

@media only screen and (min-width: 520px) {
  #intro .item h2 {
    font-size: 25px;
    margin-bottom: 37%;
  }
} 

@media only screen and (min-width: 768px) {
  .carousel-caption {
      padding-bottom: 130px;
  }
  #intro .item h2 {
    font-size: 25px;
    margin-bottom: 125px;
  }
}

@media only screen and (min-width: 1199px) {
  #intro .item h2 {
    font-size: 25px;
    margin-bottom: 222px;
  }
}

@media only screen and (min-width: 1200px) {
  #intro .item h2 {
    margin-bottom: 100px;
  }
}

/* SKILLS */

.skillsContainer {
  display: grid;
  /* grid-template-columns: auto auto auto auto auto auto; */
  grid-template-columns: 11vw 11vw 11vw 11vw 11vw 11vw;
  grid-row-gap: 4vh;
  grid-column-gap: 3vw;
  justify-content: center;
}

.skillsContainer svg {
  height: 8vh;
  width: 8vw;
}

.skillsContainer div {
    min-width: 10vw;
}

.skillsContainer div div {
  min-height: 7vh;
}

.skillsContainer h2 {
  color: #ffffff;
}

@media only screen and (max-width: 600px) {
  .skillsContainer {
    display: grid;
    grid-template-columns: auto auto auto auto;
    grid-row-gap: 4vh;
    grid-column-gap: 3vh;
  }
  #agile {
    height: 7vh !important;
  }
  
  #wordpress{
    height: 8vh !important;
  }
}

#agile {
  height: 8vh;
}

#wordpress{
  height: 9vh;
}
/* APPLICATIONS -Taken from portfolio 2 for the Applications part of portfolio main.css*/
figure {
    background: #fff;
    margin-bottom: 45px;
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.04), 0 2px 10px 0 rgba(0, 0, 0, 0.06);
    min-height: 40vh;
  }
  figure .img-wrapper {
    position: relative;
    overflow: hidden;
  }
  figure img {
    -webkit-transform: scale3d(1, 1, 1);
    transform: scale3d(1, 1, 1);
    -webkit-transition: -webkit-transform 400ms;
    transition: transform 400ms;
  }
  figure:hover img {
    -webkit-transform: scale3d(1.2, 1.2, 1);
    transform: scale3d(1.2, 1.2, 1);
  }
figure:hover .overlay {
    opacity: 1;
  }
  figure:hover .overlay .buttons a {
    -webkit-transform: scale3d(1, 1, 1);
    transform: scale3d(1, 1, 1);
  }
  figure .overlay {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    padding: 10px;
    text-align: center;
    background: rgba(0, 0, 0, 0.7);
    opacity: 0;
    -webkit-transition: opacity 400ms;
    transition: opacity 400ms;
  }
  figure .overlay a {
    display: inline-block;
    color: #fff;
    padding: 10px 23px;
    line-height: 1;
    border: 1px solid #fff;
    border-radius: 0px;
    margin: 4px;
    -webkit-transform: scale3d(0, 0, 0);
    transform: scale3d(0, 0, 0);
    -webkit-transition: all 400ms;
    transition: all 400ms;
  }
  figure .overlay a:hover {
    text-decoration: none;
  }
  figure .overlay:hover a {
    -webkit-transform: scale3d(1, 1, 1);
    transform: scale3d(1, 1, 1);
  }
  figure .buttons {
    position: absolute;
    left: 0;
    right: 0;
    margin: auto;
    bottom: 25%;
  }
  figure figcaption {
    /* padding: 20px 25px; */
    padding: 3px 25px;
    margin-top: 0;
    color: #666;
  }
  figure figcaption h4 {
    margin: 0;
  }
  figure figcaption h4 a {
    color: #02bdd5;
  }
  figure figcaption p {
    font-size: 14px;
    margin-bottom: 0;
    margin-top: 5px;
  }

  .img-wrapper > .img-responsive {
      max-width: 60%;
      width: auto;
      margin: 5% auto;
  }

  figure .img-responsive {
    max-height: 150px;
  }

  .mobileBtns{
    position: relative !important;
    opacity: 1 !important;
    text-decoration: none;
  }
  
  .mobileLinks{
    outline: 0 !important;
    text-decoration: none !important;
    transform: scale3d(1, 1, 1) !important;
  }
  
  .navBarOpen {
    margin: 0 !important;
    padding: 0 !important;
  }

  .mobileApps {
    min-height: 50vh;
    /* max-height: 55vh; */
}

  @media screen and (min-width: 600px) and (max-width: 768px) {
    /* Have two apps next to each other in between the above sizes */
    .col-xsm-6 {
      float: left;
    }
    .col-xsm-6 {
      width: 50%;
    }
  }

  /* FOOTER */
  #footer {
    background-color: #777777;
  }

  /* #footer p.social a.linkedin {
    background-color: #0077b5;
  }

  #footer p.social a.github {
    background-color: #333;
  } */

  #footer p {
    text-align:center;
  }

  .footerTitle{
    color: white;
  }

  #footer a {
    color: #B9D3C8; 
  }

  /* IMAGE SHAKE */
  .socialMedia :hover {
    animation: shake 2s;
    animation-iteration-count: infinite;
  }

  @keyframes shake {
    10%, 90% {
      transform: translate3d(-1px, 0, 0);
    }
    
    20%, 80% {
      transform: translate3d(2px, 0, 0);
    }
  
    30%, 50%, 70% {
      transform: translate3d(-4px, 0, 0);
    }
  
    40%, 60% {
      transform: translate3d(4px, 0, 0);
    }
  }

